--- a/client/src/assets/scss/_themes.scss
+++ b/client/src/assets/scss/_themes.scss
@@ -14,6 +14,7 @@
   --background-primary: hsl(240deg 27% 98%);
   --background-secondary: hsl(0deg 0% 100%);
   --background-tetriary: hsl(0deg 0% 100%);
+  --background-quaternary: hsl(0deg 0% 100%);
   --foreground-primary: hsl(231deg 20% 61%);
   --sidebar-background: hsl(231deg 20% 27%);
   --sidebar-border: hsl(232deg 20% 36%);
@@ -43,7 +44,7 @@
   --invoice-grand-total: hsl(231deg 20% 27%);
   --invoice-item-title: hsl(231deg 36% 63%);
   --input-inner-border: hsl(231deg 75% 93%);
-  --label-foreground: hsl(231deg 75% 93%);
+  --label-foreground: hsl(231deg 36% 63%);
   --select-option-divider: hsl(231deg 75% 93%);
   --items-list: hsl(225deg 14% 53%);
 
